syntax = "proto3";
option go_package = "user/";

message UserRequest{
  // @inject_tag: json:"nick_name" form:"nick_name" uri:"nick_name"
  string Nickname = 1;
  // @inject_tag: json:"user_name" form:"user_name" uri:"user_name"
  string Username = 2;
  // @inject_tag: json:"password" form:"password" uri:"password"
  string Password = 3;
  // @inject_tag: json:"password_confirm" form:"password_confirm" uri:"password_confirm"
  string PasswordConfirm = 4;
  // @inject_tag: json:"user_id" form:"user_id" uri:"user_id"
  uint64 UserID = 5;
}

message UserResponse{
  // @inject_tag: json:"user_id" form:"user_id" uri:"user_id"
  uint64 UserID = 1;
  // @inject_tag: json:"nick_name" form:"nick_name" uri:"nick_name"
  string Nickname = 2;
  // @inject_tag: json:"user_name" form:"user_name" uri:"user_name"
  string Username = 3;
}

message UserDetailResponse{
  // @inject_tag: json:"user_response" form:"user_response" uri:"user_response"
  UserResponse UserDetail = 1;
  // @inject_tag: json:"code" form:"code"" uri:"code""
  int64 Code = 2;
  // @inject_tag: json:"msg" form:"msg"" uri:"msg""
  string Msg = 3;
}

message UserCommonResponse{
  // @inject_tag: json:"code" form:"code"" uri:"code""
  int64 Code = 1;
  // @inject_tag: json:"msg" form:"msg"" uri:"msg""
  string Msg = 2;
  // @inject_tag: json:"data" form:"data"" uri:"data""
  string Data = 3;
}

service UserService{
  rpc UserLogin(UserRequest) returns(UserDetailResponse);
  rpc UserRegister(UserRequest) returns(UserCommonResponse);
  rpc UserLogout(UserRequest) returns(UserCommonResponse);
  rpc UserChangePassword(UserRequest) returns(UserCommonResponse);
  rpc UserDelete(UserRequest) returns(UserCommonResponse);
}